--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 dm-tree==0.1.6
 gym==0.23.1
-numpy==1.22.3
+numpy==1.23.3
+vec-noise==1.1.4
 supersuit==3.3.5
 torch==1.10.0
 git+http://gitlab.aicrowd.com/neural-mmo/neurips2022-nmmo.git
