--- a/.github/workflows/build-and-deploy-to-gke-gar.yml
+++ b/.github/workflows/build-and-deploy-to-gke-gar.yml
@@ -15,6 +15,14 @@ name: Build and Deploy to GKE
 on:
   push:
     branches: [ $default-branch ]
+  workflow_dispatch:
+    # inputs:
+    #   logLevel:
+    #     description: 'Log level'
+    #     required: true
+    #     default: 'warning'
+      tags:
+        description: 'Manual Workflow Dispatch'
 
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
