--- a/deployment.yml
+++ b/deployment.yml
@@ -14,6 +14,13 @@ spec:
       labels:
         app: d-platypus-nmmo-nips
     spec:
+      volumes:
+        - name: dshm
+          emptyDir:
+            medium: Memory
       containers:
         - image: LOCATION-docker.pkg.dev/PROJECT_ID/REPOSITORY/IMAGE:TAG
           name: platypus-nmmo-container
+          volumeMounts:
+            - mountPath: /dev/shm
+              name: dshm
