--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ dm-tree==0.1.6
 gym==0.23.1
 numpy==1.23.3
 supersuit==3.3.5
-pip install torch==1.10.0+cu113 -f https://download.pytorch.org/whl/torch_stable.html 
+torch==1.10.0+cu113 -f https://download.pytorch.org/whl/torch_stable.html 
 pandas==1.4.1
 matplotlib==3.5.1
 git+http://gitlab.aicrowd.com/neural-mmo/neurips2022-nmmo.git
