--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ numpy==1.23.3
 supersuit==3.3.5
 pandas==1.4.1
 matplotlib==3.5.1
+wandb
 git+http://gitlab.aicrowd.com/neural-mmo/neurips2022-nmmo.git
